<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="@dimen/default_layout_padding"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/location_service_text_longitude"
        android:textColor="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/details_activity_longitude_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/location_service_text_latitude"
        android:textColor="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/details_activity_latitude_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/location_service_text_city"
        android:textColor="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/details_activity_city_name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/location_service_text_country"
        android:textColor="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/details_activity_country_name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/location_service_text_postal"
        android:textColor="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/details_activity_postal_code_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/location_service_text_street"
        android:textColor="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/details_activity_street_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/deteails_activity_text_description"
        android:textColor="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/details_activity_place_description_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:textSize="@dimen/big_text_size"/>

</LinearLayout>