<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/default_layout_padding">

    <TextView
        android:id="@+id/location_service_location_fetching_info_tv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/location_service_fragment_fetching_location"/>

    <TextView
        android:id="@+id/location_service_longitude_tv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/location_service_latitude_tv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/location_service_city_name_tv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/location_service_country_name_tv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/location_service_postal_code_tv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="invisible"/>

    <ProgressBar
        android:id="@+id/location_service_progress_bar_pb"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/location_service_place_description_et"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:hint="@string/location_service_place_description_hint"
        android:lines="3"
        android:textColor="@android:color/holo_purple"
        android:textSize="@dimen/big_text_size"
        />

    <Button
        android:id="@+id/location_service_save_current_location_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/location_service_save_location"
        android:visibility="invisible"/>

</LinearLayout>